--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </style>
 </head>
 <body>
-    <h1>FastAdmin项目导航</h1>
+    <h1>迭代项目导航</h1>
     
     <!-- 迭代版本 v1.2.0
     <div class="iteration">
