--- a/index.html
+++ b/index.html
@@ -145,10 +145,8 @@
             <div class="date">2025-04-16</div>
         </div>
         <ul class="page-list">
-            <li><a href="index.html">首页</a></li>
-            <!-- <li><a href="list.html">问题列表</a></li> -->
-            <li><a href="add_question.html">添加问题</a></li>
-            <!-- <li><a href="categories.html">分类管理</a></li> -->
+            <li><a href="index.html">保险业务-出单话术库</a> <span class="tag new">新增</span></li>
+            <li><a href="add_question.html">添加/编辑问题话术</a> <span class="tag new">新增</span></li>
         </ul>
     </div>
     
