--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             <div class="date">2025-04-16</div>
         </div>
         <ul class="page-list">
-            <li><a href="index.html">保险业务-出单话术库</a> <span class="tag new">新增</span></li>
-            <li><a href="add_question.html">添加/编辑问题话术</a> <span class="tag new">新增</span></li>
+            <li><a href="Iteration2506-Car/OutboundScriptLibrary.html">保险业务-出单话术库</a> <span class="tag new">新增</span></li>
+            <li><a href="Iteration2506-Car/add_question.html">添加/编辑问题话术</a> <span class="tag new">新增</span></li>
         </ul>
     </div>
     
