--- a/Iteration2506-Car/OutboundScriptLibrary.html
+++ b/Iteration2506-Car/OutboundScriptLibrary.html
@@ -268,7 +268,7 @@
                                 
                                 <!-- 工具栏 -->
                                 <div id="toolbar" class="toolbar">
-                                    <a href="add_question.html" class="btn btn-success"><i class="fa fa-plus"></i> 新增</a>
+                                    <a href="./add_question.html" class="btn btn-success"><i class="fa fa-plus"></i> 新增</a>
                                     <a href="javascript:;" class="btn btn-danger disabled btn-selected"><i class="fa fa-trash"></i> 批量删除</a>
                                     <a href="javascript:;" class="btn btn-info"><i class="fa fa-upload"></i> 导入</a>
                                     <a href="javascript:;" class="btn btn-info"><i class="fa fa-download"></i> 导出</a>
