--- a/Iteration2506-Car/OutboundScriptLibrary.html
+++ b/Iteration2506-Car/OutboundScriptLibrary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>话术管理系统 - FastAdmin</title>
+    <title>出单话术管理</title>
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.staticfile.org/bootstrap-table/1.11.0/bootstrap-table.min.css" rel="stylesheet">
@@ -210,7 +210,7 @@
                 <ol class="breadcrumb">
                     <li><a href="#"><i class="fa fa-dashboard"></i> 主页</a></li>
                     <li><a href="#">保险业务</a></li>
-                    <li class="active">出单话术管理</li>
+                    <li class="active">出单话术库</li>
                 </ol>
                 
                 <!-- 内容面板 -->
@@ -268,7 +268,7 @@
                                 
                                 <!-- 工具栏 -->
                                 <div id="toolbar" class="toolbar">
-                                    <a href="./add_question.html" class="btn btn-success"><i class="fa fa-plus"></i> 新增</a>
+                                    <a href="../Iteration2506-Car/add_question.html" class="btn btn-success"><i class="fa fa-plus"></i> 新增</a>
                                     <a href="javascript:;" class="btn btn-danger disabled btn-selected"><i class="fa fa-trash"></i> 批量删除</a>
                                     <a href="javascript:;" class="btn btn-info"><i class="fa fa-upload"></i> 导入</a>
                                     <a href="javascript:;" class="btn btn-info"><i class="fa fa-download"></i> 导出</a>
